# FlashRAG

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup_env.sh
.github/workflows/: ci.yml
configs/: flashrag_agentic.yaml  flashrag_basic.yaml  flashrag_hybrid_search.yaml  flashrag_multimodal.yaml
docker/: Dockerfile  docker-compose.yml
docs/: Embeddings.md  Evaluation.md  FAQ.md  Generation.md  Home.md  Installation.md  Quick-Start.md  Retrieval.md
examples/: agentic_rag.py  basic_rag.py  benchmark_rag.py  hybrid_search.py  multimodal_rag.py
flashrag/: __init__.py  cli.py  registry.py
flashrag/analytics/: __init__.py  benchmark.py  metrics.py  ragas.py
flashrag/cfg/: __init__.py  config.py
flashrag/data/: __init__.py  chunkers.py  loaders.py  preprocessor.py  semantic_chunker.py
flashrag/embeddings/: __init__.py  base.py  openai_embeddings.py  sentence_transformer.py  vision_embeddings.py
flashrag/engine/: __init__.py  exporter.py  predictor.py  trainer.py  validator.py
flashrag/generation/: __init__.py  citation.py  generator.py  prompt_templates.py
flashrag/pipelines/: __init__.py  agentic_rag.py  basic_rag.py  corrective_rag.py  graph_rag.py  multimodal_rag.py
flashrag/retrieval/: __init__.py  bm25.py  colbert.py  hybrid.py  hyde.py  query_transform.py  reranker.py  vector_store.py
flashrag/solutions/: __init__.py  document_qa.py  knowledge_base.py  research_assistant.py
flashrag/utils/: __init__.py  callbacks.py  io.py  visualize.py
tests/: test_comprehensive.py  test_embeddings.py  test_new_components.py  test_registry.py  test_retrieval.py
